# prj-envoy-v3

./: .bazelrc  .gitignore  .gitmodules  README.md  WORKSPACE  clang.bazelrc
envoys/: BUILD.bazel
filters/: BUILD.bazel  http_filter.cc  http_filter.h  http_filter_config.cc
utils/certs/: BUILD.bazel  atai-filter.com.crt  atai-filter.com.csr  atai-filter.com.key  ca.crt  ca.key  ca.srl
utils/configs/: BUILD.bazel  front-envoy-config-test.yaml  front-envoy-config.yaml
utils/dockerfiles/: Dockerfile-envoy-alpine
utils/scripts/: BUILD.bazel  bazel_stamp.sh  init-networks.sh  run-front-proxy.sh
