# build envoy containers
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

filegroup(
    name = "certs",
    srcs = [
        "//utils/certs:atai-filter.com.crt",
        "//utils/certs:atai-filter.com.key",
        "//utils/certs:custom-ca-certificates.crt",
    ],
)

filegroup(
    name = "front-proxy-config-execution",
    srcs = [
        "//utils/configs:front-envoy-config.yaml",
        "//utils/scripts:run-front-proxy.sh",
    ]
)


container_image(
    name = "front-envoy-v0.0.0",  # image tag
    base = "@alpine_envoy_base//image",
    entrypoint = [
        "/run-front-proxy.sh",
    ],
    files = [
        ":certs",
        ":front-proxy-config-execution",
        "//filters:envoy",
    ],
    repository = "alantai/prj-envoy-v3",
    visibility = ["//visibility:public"],
)

# declare where and how the image will be published
container_push(
    name = "push-front-envoy",
    format = "Docker",
    image = ":front-envoy-v0.0.0",
    registry = "index.docker.io",
    repository = "alantai/prj-envoy-v3",
    tag = "v0.0.0",
)
